# swagger.json
@@ -5,9 +5,6 @@
     "version": "0.0.0",
     "title": "Personal",
     "termsOfService": "http://swagger.io/terms/",
-    "peep": {
-      "email": "dlwhitehurst@gmail.com"
-    },
     "license": {
       "name": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
@@ -18,7 +15,7 @@
   "tags": [
     {
       "name": "REST API",
-      "description": "Operations for Peeps",
+      "description": "Personal Resources",
       "externalDocs": {
         "description": "Find out more",
         "url": "http://swagger.io"
@@ -100,6 +97,181 @@
       }
     },
     "/peeps/{peepId}": {
+      "get": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Find Peep by ID",
+        "description": "Returns a single Peep",
+        "operationId": "getPeepById",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "peepId",
+            "in": "path",
+            "description": "ID of Peep to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Peep"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Update an existing Peep",
+        "description": "",
+        "operationId": "updatePeepById",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "peepId",
+            "in": "path",
+            "description": "ID of Peep to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "405": {
+            "description": "Validation Exception"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Deletes a Peep by ID",
+        "description": "",
+        "operationId": "deletePeep",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "peepId",
+            "in": "path",
+            "description": "ID of Peep to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Invalid ID Supplied"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/owner/peeps": {
+      "get": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Get Peeps",
+        "description": "Get a JSON collection or array of Peeps",
+        "operationId": "getPeeps",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Peep"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Add a new Peep",
+        "description": "",
+        "operationId": "addPeep",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Peep object to be added to the system",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Peep"
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "peep resource"
+        ],
+        "summary": "Deletes all Peeps",
+        "description": "",
+        "operationId": "deleteAllPeeps",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      }
+    },
+    "/owner/peeps/{peepId}": {
       "get": {
         "tags": [
           "peep resource"
